--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
-node_modules/
-out/
+# dependencies
+/node_modules
+
+# next.js
+/out/
 /.next/
+
+# production
+/build
+
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*
+
+# vercel
+.vercel
+
+# misc
+.DS_Store
+*.pem
