--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "emotion-theming": "^10.0.27",
     "next": "^9.4.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "swr": "^0.2.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.10.4",
