--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-emotion": "^10.0.27",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.1.0",
