Added redux and cart reducer
still going to change the structure a little bit

--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,9 @@
           "@components": "./components",
           "@pages": "./pages",
           "@layouts": "./layouts",
-          "@test": "./test"
+          "@test": "./test",
+          "@redux": "./redux",
+          "@styles": "./styles"
         }
       }
     ]
