--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
     "start": "next start",
     "test": "jest",
     "test:w": "jest --watchAll",
+    "test:c": "jest --coverage",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
+    "@types/react-redux": "^7.1.9",
     "emotion-theming": "^10.0.27",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "swr": "^0.2.3"
   },
   "devDependencies": {
