Restructure Redux | Added features
- restructured redux
- added correct types to actons and state
- Created ProductImage component to deal with missing images
- added feature to remove item from cart
- applied feature to ProductCart

--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
           "@layouts": "./layouts",
           "@test": "./test",
           "@redux": "./redux",
+          "@store": "./store",
           "@styles": "./styles"
         }
       }
