--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["node", "@emotion/core"],
     "baseUrl": ".",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -20,6 +21,7 @@
       "@layouts/*": ["layouts/*"],
       "@test/*": ["test/*"],
       "@redux/*": ["redux/*"],
+      "@store/*": ["store/*"],
       "@styles/*": ["styles/*"]
     }
   },
