--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
+    "axios": "^0.19.2",
     "emotion-theming": "^10.0.27",
+    "lodash": "^4.17.19",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "swr": "^0.2.3"
   },
   "devDependencies": {
@@ -24,6 +28,7 @@
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@testing-library/react": "^10.4.7",
     "@types/jest": "^26.0.5",
+    "@types/lodash": "^4.14.158",
     "@types/node": "^14.0.23",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
