--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
+    "react-spinners": "^0.9.0",
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
